# prd-mirofish-lab

./: .gitignore  AGENTS.md  PRD_SCHEMA.json  README.md  docker-compose.yml  workspace.dsl
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: config.py  main.py  models.py
apps/api/app/routes/: chat.py  health.py  validation.py
apps/api/app/schemas/: __init__.py  common.py  enums.py  prd.py  simulation.py
apps/api/app/services/: completeness.py  conversation_state.py  markdown_renderer.py  mirofish_adapter.py  mirofish_client.py  mock_prd_builder.py  mock_validation_engine.py  prd_generator.py  session_store.py  validation_packager.py
apps/api/app/validators/: __init__.py  schema_validator.py
apps/api/tests/: conftest.py  test_chat_api.py  test_conversation_state.py  test_markdown_renderer.py  test_mirofish_adapter.py  test_mock_validation_engine.py  test_schema_validator.py  test_validation_packager.py
apps/api/tests/fixtures/: invalid_bad_enum.json  invalid_extra_field.json  invalid_missing_required.json  sample_prd_full.json  sample_prd_minimal.json
apps/web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx
apps/web/src/api/: chatApi.ts  client.ts  index.ts  validationApi.ts
apps/web/src/components/: ChatPanel.tsx  CheckpointModal.tsx  PRDPreview.tsx  PhaseBadge.tsx  ValidationPanel.tsx
apps/web/src/hooks/: useChat.ts  useCheckpoints.ts  useValidation.ts
apps/web/src/styles/: app.module.css  chat.module.css  common.module.css  globals.css  prd.module.css  (+1 more)
docs/: ARCHITECTURE.md
(+4 files in other folders)
